--- a/testCase/StudentTestCase.html
+++ b/testCase/StudentTestCase.html
@@ -33,33 +33,36 @@ def driver = DriverFactory.getWebDriver()
 String baseUrl = "https://www.katalon.com/"
 selenium = new WebDriverBackedSelenium(driver, baseUrl)
 selenium.open("http://localhost:8080/")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='|'])[1]/following::span[1]")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='LOGIN'])[2]/following::span[1]")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='LOGIN'])[1]/following::span[1]")
-selenium.click("id=input-155")
-selenium.type("id=input-155", "ct001")
-selenium.type("id=input-158", "123")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='LOGIN'])[2]/following::span[1]")
+selenium.click("id=input-66")
+selenium.type("id=input-66", "ct001")
+selenium.click("id=input-69")
+selenium.type("id=input-69", "123")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='Password'])[1]/following::div[2]")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='Password'])[1]/following::span[1]")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='เข้าสู่ระบบเสร็จสิ้น .'])[1]/preceding::button[1]")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='พนักงานเคาท์เตอร์'])[1]/following::label[1]")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='พนักงานเคาท์เตอร์'])[1]/following::div[1]")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกคำนำหน้าชื่อ'])[1]/following::div[1]")
-selenium.click("id=นาย-list-item-245")
-selenium.click("id=input-200")
-selenium.type("id=input-200", "รวิสุทนร")
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='นางสาว'])[1]/preceding::div[2]")
+selenium.click("id=input-109")
+selenium.type("id=input-109", "พิชญตม์ เสถียรแสงอุษา")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกเพศ'])[1]/following::div[1]")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='หญิง'])[1]/preceding::div[2]")
-selenium.click("id=input-210")
-selenium.type("id=input-210", "17")
-selenium.click("id=input-213")
-selenium.type("id=input-213", "wdwedweww")
-selenium.click("id=input-216")
-selenium.type("id=input-216", "weweweeww")
+selenium.click("id=ชาย-list-item-161")
+selenium.click("id=input-119")
+selenium.type("id=input-119", "17")
+selenium.click("id=input-122")
+selenium.type("id=input-122", "blazyblazer")
+selenium.click("id=input-125")
+selenium.type("id=input-125", "blazysama")
 selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกจังหวัด'])[1]/following::div[1]")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='เชียงใหม่'])[1]/preceding::div[2]")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[8]/following::div[1]")
-selenium.type("id=input-226", "0999245757")
-selenium.click("id=input-229")
-selenium.type("id=input-229", "blazt@gmail.com")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[10]/following::div[1]")
-selenium.type("id=input-232", "stateplace")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='กรอกที่อยู่'])[1]/following::div[5]")
-selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::button[1]")
+selenium.click("id=เชียงใหม่-list-item-165")
+selenium.click("id=input-135")
+selenium.type("id=input-135", "0999249353")
+selenium.click("id=input-138")
+selenium.type("id=input-138", "infruit@gmail.com")
+selenium.type("id=input-141", "pyplace")
 assertEquals("บันทึก", selenium.getText("xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::span[1]"));
+selenium.click("xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::span[1]")
