close #107 - fix student test case

--- a/testCase/AddStudentTestCase.html
+++ b/testCase/AddStudentTestCase.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>Student Test Case</title>
+	<title>StudentTestCase</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -145,8 +145,7 @@
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::button[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::button[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='CreatedBy'])[1]/following::button[1]</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[10]/button</option><option>//div[10]/button</option><option>css=button.v-btn.v-btn--contained.theme--dark.v-size--large.blue.darken-2</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บันทึก'])[1]/following::div[4]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บันทึก'])[1]/following::div[4]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::div[12]</option><option>xpath=//*/text()[normalize-space(.)='กรุณาป้อนข้อมูลให้ครบ']/parent::*</option><option>//div[@id='app']/div[3]/main/div/div/div/div[2]/div/div/div</option><option>//div/div/div/div[2]/div/div/div</option><option>css=div.v-snack__content</option></datalist></td><td>กรุณาป้อนข้อมูลให้ครบ
- Close</td>
+<tr><td>assertText</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บันทึก'])[1]/following::div[4]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บันทึก'])[1]/following::div[4]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ประหยัด จันทร์อังคาร'])[1]/following::div[12]</option><option>xpath=//*/text()[normalize-space(.)='กรุณาป้อนข้อมูลให้ครบถ้วน']/parent::*</option><option>//div[@id='app']/div[3]/main/div/div/div/div[2]/div/div/div</option><option>//div/div/div/div[2]/div/div/div</option><option>css=div.v-snack__content</option></datalist></td><td>กรุณาป้อนข้อมูลให้ครบถ้วน</td>
 </tr>
 </tbody></table>
 </body>
