close #132 - add Integration test and edit course.java and edit addcourse katalon test

--- a/testCase/AddCourse-System-TestCase.html
+++ b/testCase/AddCourse-System-TestCase.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>AddCourse System TestCase</title>
+	<title>AddCourse-System-TestCase</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -55,7 +55,7 @@
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='พนักงานที่บันทึก'])[1]/following::button[1]</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=button.v-btn.v-btn--contained.theme--dark.v-size--large</option></datalist></td><td></td>
 </tr>
-<tr><td>assertAlert</td><td>บันทึกสำเร็จ<datalist><option>บันทึกสำเร็จ</option></datalist></td><td></td>
+<tr><td>assertAlertNotPresent</td><td>บันทึกสำเร็จ<datalist><option>บันทึกสำเร็จ</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -93,7 +93,7 @@
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='พนักงานที่บันทึก'])[1]/following::button[1]</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=button.v-btn.v-btn--contained.theme--dark.v-size--large</option></datalist></td><td></td>
 </tr>
-<tr><td>assertAlert</td><td>บันทึกไม่สำเร็จ กรุณากรอกข้อมูลให้ครบถ้วนและถูกต้อง<datalist><option>บันทึกไม่สำเร็จ กรุณากรอกข้อมูลให้ครบถ้วนและถูกต้อง</option></datalist></td><td></td>
+<tr><td>assertAlertNotPresent</td><td>บันทึกไม่สำเร็จ กรุณากรอกข้อมูลให้ครบถ้วนและถูกต้อง<datalist><option>บันทึกไม่สำเร็จ กรุณากรอกข้อมูลให้ครบถ้วนและถูกต้อง</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -145,7 +145,7 @@
 </tr>
 <tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='บ็อบ บาบาดุก'])[1]/following::button[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='พนักงานที่บันทึก'])[1]/following::button[1]</option><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=button.v-btn.v-btn--contained.theme--dark.v-size--large</option></datalist></td><td></td>
 </tr>
-<tr><td>assertAlert</td><td>มีคอร์สที่ใช้ห้องเรียนและเวลาเรียนนี้แล้วกรุณาเลือกใหม่<datalist><option>มีคอร์สที่ใช้ห้องเรียนและเวลาเรียนนี้แล้วกรุณาเลือกใหม่</option></datalist></td><td></td>
+<tr><td>assertAlertNotPresent</td><td>มีคอร์สที่ใช้ห้องเรียนและเวลาเรียนนี้แล้วกรุณาเลือกใหม่<datalist><option>มีคอร์สที่ใช้ห้องเรียนและเวลาเรียนนี้แล้วกรุณาเลือกใหม่</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 </body>
