close #137 - ทำ แก้ไข,อัปเดต Katalon TestCase ของระบบจัดเก็บข้อมูลพนักงาน

--- a/testCase/Employee Test Suite.html
+++ b/testCase/Employee Test Suite.html
@@ -43,7 +43,7 @@
 </tr>
 <tr><td>click</td><td>id=emp005<datalist><option>id=emp005</option><option>//input[@id='emp005']</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[3]/div/div/div/div/div/input</option><option>//div[3]/div/div/div/div/div/input</option><option>css=#emp005</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=emp005<datalist><option>id=emp005</option><option>//input[@id='emp005']</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[3]/div/div/div/div/div/input</option><option>//div[3]/div/div/div/div/div/input</option><option>css=#emp005</option></datalist></td><td>opopopoo</td>
+<tr><td>type</td><td>id=emp005<datalist><option>id=emp005</option><option>//input[@id='emp005']</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[3]/div/div/div/div/div/input</option><option>//div[3]/div/div/div/div/div/input</option><option>css=#emp005</option></datalist></td><td>opopopoooooppp</td>
 </tr>
 <tr><td>click</td><td>id=emp006<datalist><option>id=emp006</option><option>//input[@id='emp006']</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[4]/div/div/div/div/div/input</option><option>//div[4]/div/div/div/div/div/input</option><option>css=#emp006</option></datalist></td><td></td>
 </tr>
@@ -54,6 +54,8 @@
 <tr><td>click</td><td>//div[5]/div<datalist><option>//div[@id='list-136']/div[5]/div</option><option>//div[5]/div</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=emp008<datalist><option>id=emp008</option><option>//textarea[@id='emp008']</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[6]/div/div/div/div/div/textarea</option><option>//textarea</option><option>css=#emp008</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=emp011<datalist><option>id=emp011</option><option>//input[@id='emp011']</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[6]/div/div/div/div/div/input</option><option>//div[6]/div/div/div/div/div/input</option><option>css=#emp011</option></datalist></td><td>ABXC@sut.ac.th</td>
 </tr>
 <tr><td>type</td><td>id=emp008<datalist><option>id=emp008</option><option>//textarea[@id='emp008']</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[6]/div/div/div/div/div/textarea</option><option>//textarea</option><option>css=#emp008</option></datalist></td><td>140 หมู่ 2</td>
 </tr>
