close #168 - แก้ไข Ui และเพิ่ม Katalon test ของระบบแสดงข้อมูลคอร์สเรียน

--- a/testCase/AddCourseTestCase.html
+++ b/testCase/AddCourseTestCase.html
@@ -27,7 +27,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='css00']/label<datalist><option>//div[@id='css00']/label</option><option>//div[4]/label</option><option>css=#css00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=ad001<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option></datalist></td><td>AAA</td>
+<tr><td>type</td><td>id=ad0010<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option><option>id=ad0010</option></datalist></td><td>AAA</td>
 </tr>
 <tr><td>click</td><td>//div[2]/div/div/div[2]/div/div/div/div/div/div<datalist><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>//div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td></td>
 </tr>
@@ -79,7 +79,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='css00']/label<datalist><option>//div[@id='css00']/label</option><option>//div[4]/label</option><option>css=#css00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=ad001<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option></datalist></td><td>AAA</td>
+<tr><td>type</td><td>id=ad0010<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option><option>id=ad0010</option></datalist></td><td>AAA</td>
 </tr>
 <tr><td>click</td><td>//div[2]/div/div/div[2]/div/div/div/div/div/div<datalist><option>//div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td></td>
 </tr>
@@ -131,7 +131,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='css00']/label<datalist><option>//div[@id='css00']/label</option><option>//div[4]/label</option><option>css=#css00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=ad001<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option></datalist></td><td>AAA</td>
+<tr><td>type</td><td>id=ad0010<datalist><option>id=ad001</option><option>//input[@id='ad001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div/div/div/div/input</option><option>//input</option><option>css=#ad001</option><option>id=ad0010</option></datalist></td><td>AAA</td>
 </tr>
 <tr><td>click</td><td>xpath=(//button[@type='button'])[5]<datalist><option>xpath=(//button[@type='button'])[5]</option><option>//div[@id='app']/div[5]/main/div/div/div[2]/div/div/div[7]/button</option><option>//div[7]/button</option><option>css=button.v-btn.v-btn--contained.theme--dark.v-size--large</option></datalist></td><td></td>
 </tr>
