close #172 - edit view student test case

--- a/testCase/ViewStudentTestCase.html
+++ b/testCase/ViewStudentTestCase.html
@@ -33,9 +33,9 @@
 </tr>
 <tr><td>click</td><td>//div[@id='vistu00']/label<datalist><option>//div[@id='vistu00']/label</option><option>//div[6]/label</option><option>css=#vistu00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=search_emp001<datalist><option>id=search_emp001</option><option>//input[@id='search_emp001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_emp001</option></datalist></td><td></td>
+<tr><td>click</td><td>id=search_stu001<datalist><option>id=search_stu001</option><option>//input[@id='search_stu001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_stu001</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=search_emp001<datalist><option>id=search_emp001</option><option>//input[@id='search_emp001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_emp001</option></datalist></td><td>อรธิวา</td>
+<tr><td>type</td><td>id=search_stu001<datalist><option>id=search_stu001</option><option>//input[@id='search_stu001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_stu001</option></datalist></td><td>อรธิวา</td>
 </tr>
 <tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i</option><option>//div/div/button/span/i</option><option>css=i.v-icon.notranslate.v-icon--link.fas.fa-search.theme--light</option></datalist></td><td></td>
 </tr>
@@ -69,13 +69,11 @@
 </tr>
 <tr><td>click</td><td>//div[@id='vistu00']/label<datalist><option>//div[@id='vistu00']/label</option><option>//div[6]/label</option><option>css=#vistu00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>id=search_emp001<datalist><option>id=search_emp001</option><option>//input[@id='search_emp001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_emp001</option></datalist></td><td></td>
+<tr><td>click</td><td>id=search_stu001<datalist><option>id=search_stu001</option><option>//input[@id='search_stu001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_stu001</option></datalist></td><td></td>
 </tr>
-<tr><td>type</td><td>id=search_emp001<datalist><option>id=search_emp001</option><option>//input[@id='search_emp001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_emp001</option></datalist></td><td>อัมรา</td>
+<tr><td>type</td><td>id=search_stu001<datalist><option>id=search_stu001</option><option>//input[@id='search_stu001']</option><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/input</option><option>//input</option><option>css=#search_stu001</option></datalist></td><td>ดำดวง</td>
 </tr>
 <tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/button/span/i</option><option>//div/div/button/span/i</option><option>css=i.v-icon.notranslate.v-icon--link.fas.fa-search.theme--light</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label</option><option>//div[2]/div/div/div/div[3]/label</option><option>css=div.v-card__actions &gt; label</option></datalist></td><td></td>
 </tr>
 <tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label</option><option>//div[2]/div/div/div/div[3]/label</option><option>css=div.v-card__actions &gt; label</option></datalist></td><td>ไม่พบข้อมูล</td>
 </tr>
