close #171 - fix add student test case

--- a/testCase/AddStudentTestCase.html
+++ b/testCase/AddStudentTestCase.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>AddStudentTests</title>
+	<title>AddStudentTestCase</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -31,17 +31,17 @@
 </tr>
 <tr><td>click</td><td>//div[@id='stu00']/label<datalist><option>//div[@id='stu00']/label</option><option>//div[3]/label</option><option>css=#stu00 &gt; label</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกคำนำหน้าชื่อ'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกคำนำหน้าชื่อ'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ชื่อ-นามสกุล'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[2]/main/div/div/div/div/div/div/div/div/div/div/div/div</option><option>//div/div/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td></td>
+<tr><td>click</td><td>//div/div/div/div/div/div/div/div/div/div/div/div<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกคำนำหน้าชื่อ'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[1]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[2]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='ชื่อ-นามสกุล'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[2]/main/div/div/div/div/div/div/div/div/div/div/div/div</option><option>//div/div/div/div/div/div/div/div/div/div/div/div</option><option>css=div.v-select__selections</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=นาย-list-item-216<datalist><option>id=นาย-list-item-216</option><option>//div[@id='นาย-list-item-216']</option><option>xpath=(//div[@id='list-164']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#นาย-list-item-216</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=stu002<datalist><option>id=stu002</option><option>//input[@id='stu002']</option><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/div/input</option><option>//div[2]/div/div/div/div/input</option><option>css=#stu002</option></datalist></td><td></td>
 </tr>
+<tr><td>click</td><td>//div/div/div/div[2]/div/div/div/div/div/div<datalist><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[2]/div/div/div/div/div/div</option><option>//div/div/div/div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=ชาย-list-item-223<datalist><option>id=ชาย-list-item-223</option><option>//div[@id='ชาย-list-item-223']</option><option>xpath=(//div[@id='list-174']/div/div/div)[2]</option><option>//div/div/div/div/div/div/div/div</option><option>css=#ชาย-list-item-223</option></datalist></td><td></td>
+</tr>
 <tr><td>type</td><td>id=stu002<datalist><option>id=stu002</option><option>//input[@id='stu002']</option><option>//div[@id='app']/div[2]/main/div/div/div[2]/div/div/div/div/div[2]/div/div/div/div/input</option><option>//div[2]/div/div/div/div/input</option><option>css=#stu002</option></datalist></td><td>พิชญตม์ เสถียรแสงอุษา</td>
-</tr>
-<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกเพศ'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกเพศ'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[3]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[4]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='กรอกอายุ'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[3]/main/div/div/div/div/div/div[2]/div/div/div/div/div/div</option><option>//div[2]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
-</tr>
-<tr><td>click</td><td>xpath=(//div[@id='list-174']/div/div)[2]<datalist><option>xpath=(//div[@id='list-174']/div/div)[2]</option><option>//div/div/div/div/div/div/div</option><option>css=div.v-list-item__content</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>id=stu004<datalist><option>id=stu004</option><option>//input[@id='stu004']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#stu004</option></datalist></td><td></td>
 </tr>
@@ -55,7 +55,7 @@
 </tr>
 <tr><td>type</td><td>id=stu006<datalist><option>id=stu006</option><option>//input[@id='stu006']</option><option>//div[@id='app']/div[3]/main/div/div/div[2]/div/div/div/div[4]/div/div/div/div/div/input</option><option>//div[4]/div/div/div/div/div/input</option><option>css=#stu006</option></datalist></td><td>321321321321</td>
 </tr>
-<tr><td>click</td><td>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกจังหวัด'])[1]/following::div[1]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกจังหวัด'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[7]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[8]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='กรอกเบอร์โทร'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[5]/div/div/div/div/div/div</option><option>//div[5]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
+<tr><td>click</td><td>//div[5]/div/div/div/div/div/div<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='เลือกจังหวัด'])[1]/following::div[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[7]/following::div[2]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='​'])[8]/preceding::div[7]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='กรอกเบอร์โทร'])[1]/preceding::div[7]</option><option>//div[@id='app']/div[4]/main/div/div/div/div/div/div[5]/div/div/div/div/div/div</option><option>//div[5]/div/div/div/div/div/div</option><option>css=div.v-input.v-input--is-focused.theme--light.v-text-field.v-text-field--is-booted.v-text-field--enclosed.v-text-field--outlined.v-select.v-select--is-menu-active.primary--text &gt; div.v-input__control &gt; div.v-input__slot &gt; div.v-select__slot &gt; div.v-select__selections</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//div[@id='list-190']/div[14]/div<datalist><option>//div[@id='list-190']/div[14]/div</option><option>//div[14]/div</option></datalist></td><td></td>
 </tr>
@@ -71,9 +71,9 @@
 </tr>
 <tr><td>type</td><td>id=stu010<datalist><option>id=stu010</option><option>//textarea[@id='stu010']</option><option>//div[@id='app']/div[4]/main/div/div/div[2]/div/div/div/div[8]/div/div/div/div/div/textarea</option><option>//textarea</option><option>css=#stu010</option></datalist></td><td>อ.ปากช่อง จ.นครราชสีมา</td>
 </tr>
-<tr><td>click</td><td>id=stu011<datalist><option>id=stu011</option><option>//button[@id='stu011']</option><option>//div[@id='app']/div[4]/main/div/div/div[2]/div/div/div/div[10]/button</option><option>//div[10]/button</option><option>css=#stu011</option></datalist></td><td></td>
+<tr><td>click</td><td>//button[@id='stu011']/span<datalist><option>//button[@id='stu011']/span</option><option>//div[10]/button/span</option><option>css=#stu011 &gt; span.v-btn__content</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>//div[@id='app']/div[4]/main/div/div/div[2]/div/div[2]/div/div/div<datalist><option>//div[@id='app']/div[4]/main/div/div/div[2]/div/div[2]/div/div/div</option><option>//div[2]/div/div[2]/div/div/div</option><option>css=div.v-snack__content</option></datalist></td><td>บันทึกข้อมูลเสร็จสิ้น</td>
+<tr><td>assertText</td><td>//div[@id='app']/div/header/div/button/span<datalist><option>//div[@id='app']/div/header/div/button/span</option><option>//span</option><option>css=span.v-btn__content</option></datalist></td><td>Dashboard</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
