close #178 - add viewcourse failed katalon test and sort katalon test

--- a/testCase/3 Team21 Sprint 2.html
+++ b/testCase/3 Team21 Sprint 2.html
@@ -143,7 +143,9 @@
 </tr>
 <tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div</option><option>//div[2]/div/div/div/div</option><option>css=div.v-card__title</option></datalist></td><td></td>
 </tr>
-<tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div/label</option><option>//div[2]/div/div/div/div/label</option><option>css=div.v-card__title &gt; label</option></datalist></td><td>ตารางเเสดงข้อมูลคอร์สเรียน</td>
+<tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]</option><option>//div[2]/div/div/div/div[3]</option><option>css=div.v-card__actions</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[3]/label</option><option>//div[2]/div/div/div/div[3]/label</option><option>css=div.v-card__actions &gt; label</option></datalist></td><td>พบข้อมูล</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
