--- a/testCase/1 Team21 Sprint 2 View Failed..html
+++ b/testCase/1 Team21 Sprint 2 View Failed..html
@@ -32,5 +32,35 @@
 <tr><td>assertText</td><td>//div[@id='table2']/div/table/tbody/tr/td<datalist><option>//div[@id='table2']/div/table/tbody/tr/td</option><option>//td</option><option>css=td</option></datalist></td><td>No data available</td>
 </tr>
 </tbody></table>
+<table cellpadding="1" cellspacing="1" border="1">
+<thead>
+<tr><td rowspan="1" colspan="3">B6014728 View Course failed.</td></tr>
+</thead>
+<tbody>
+<tr><td>open</td><td>http://localhost:8080/<datalist><option>http://localhost:8080/</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='showLogin']/span<datalist><option>//button[@id='showLogin']/span</option><option>//div[8]/button/span</option><option>css=#showLogin &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='showloginAsEmp']/span<datalist><option>//button[@id='showloginAsEmp']/span</option><option>//div[2]/button/span</option><option>css=#showloginAsEmp &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=usernameEmp1<datalist><option>id=usernameEmp1</option><option>//input[@id='usernameEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div/div[2]/div/div/div/div/input</option><option>//input</option><option>css=#usernameEmp1</option></datalist></td><td>mg001</td>
+</tr>
+<tr><td>click</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>id=passwordEmp1<datalist><option>id=passwordEmp1</option><option>//input[@id='passwordEmp1']</option><option>//div[@id='app']/div/div/div/div[2]/div/div[2]/div[2]/div/div/div/div/input</option><option>//div[2]/div[2]/div/div/div/div/input</option><option>css=#passwordEmp1</option></datalist></td><td>123</td>
+</tr>
+<tr><td>click</td><td>//button[@id='bin-login-emp']/span<datalist><option>//button[@id='bin-login-emp']/span</option><option>//div[3]/button/span</option><option>css=#bin-login-emp &gt; span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//button[@id='SuccessEmp1']/span<datalist><option>//button[@id='SuccessEmp1']/span</option><option>//span</option><option>css=span.v-btn__content</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='vicss00']/label<datalist><option>//div[@id='vicss00']/label</option><option>//div[8]/label</option><option>css=#vicss00 &gt; label</option></datalist></td><td></td>
+</tr>
+<tr><td>click</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5</option><option>//h5</option><option>css=h5</option></datalist></td><td></td>
+</tr>
+<tr><td>assertText</td><td>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5<datalist><option>//div[@id='app']/div/main/div/div/div[2]/div/div/div/div[2]/div/table/tbody/tr/td/h5</option><option>//h5</option><option>css=h5</option></datalist></td><td>ไม่พบข้อมูล</td>
+</tr>
+</tbody></table>
 </body>
 </html>
